@@ -2,12 +2,13 @@
 
 module Main(main) where
 
-import Control.Concurrent
+import Control.Monad
 import System.Directory
 import Data.Time.Clock
 import Data.List
 import GHCi
 import Util
+import Test
 import System.Console.CmdArgs
 import Control.Exception
 
@@ -15,12 +16,14 @@ import Control.Exception
 data Options = Options
     {command :: String
     ,height :: Int
+    ,test :: Bool
     }
     deriving (Data,Typeable,Show)
 
 options = cmdArgsMode $ Options
     {command = "" &= typ "COMMAND" &= help "Command to run (defaults to ghci or cabal repl)"
     ,height = 8 &= help "Number of lines to show"
+    ,test = False &= help "Run the test suite"
     } &= verbosity &=
     program "ghcid" &= summary "Auto :reload'ing GHCi daemon"
 
@@ -38,27 +41,30 @@ main :: IO ()
 main = do
     Options{..} <- cmdArgsRun options
 #if defined(mingw32_HOST_OS)
-    wnd <- c_GetConsoleWindow
-    c_SetWindowPos wnd c_HWND_TOPMOST 0 0 0 0 3
+    when (not test) $ do
+        wnd <- c_GetConsoleWindow
+        c_SetWindowPos wnd c_HWND_TOPMOST 0 0 0 0 3
+        return ()
 #endif
-    dotGhci <- doesFileExist ".ghci"
-    ghci <- ghci $ if command /= "" then command
-                   else if dotGhci then "ghci" else "cabal repl"
-    let fire msg warnings = do
-            start <- getCurrentTime
-            load <- fmap parseLoad $ ghci msg
-            modsActive <- fmap (map snd . parseShowModules) $ ghci ":show modules"
-            modsLoad <- return $ nub $ map loadFile load
-            whenLoud $ do
-                outStrLn $ "%ACTIVE: " ++ show modsActive
-                outStrLn $ "%LOAD: " ++ show load
-            warn <- return [w | w <- warnings, loadFile w `elem` modsActive, loadFile w `notElem` modsLoad]
-            let outFill msg = outStr $ unlines $ take height $ msg ++ replicate height ""
-            outFill $ prettyOutput height $ filter isMessage load ++ warn
-            reason <- awaitFiles start $ nub $ modsLoad ++ modsActive
-            outFill $ "Reloading..." : map ("  " ++) reason
-            fire ":reload" [m | m@Message{..} <- warn ++ load, loadSeverity == Warning]
-    fire "" []
+    runTest test $ \output -> do
+        dotGhci <- doesFileExist ".ghci"
+        ghci <- ghci $ if command /= "" then command
+                       else if dotGhci then "ghci" else "cabal repl"
+        let fire msg warnings = do
+                start <- getCurrentTime
+                load <- fmap parseLoad $ ghci msg
+                modsActive <- fmap (map snd . parseShowModules) $ ghci ":show modules"
+                modsLoad <- return $ nub $ map loadFile load
+                whenLoud $ do
+                    outStrLn $ "%ACTIVE: " ++ show modsActive
+                    outStrLn $ "%LOAD: " ++ show load
+                warn <- return [w | w <- warnings, loadFile w `elem` modsActive, loadFile w `notElem` modsLoad]
+                let outFill msg = output $ take height $ msg ++ replicate height ""
+                outFill $ prettyOutput height $ filter isMessage load ++ warn
+                reason <- awaitFiles start $ nub $ modsLoad ++ modsActive
+                outFill $ "Reloading..." : map ("  " ++) reason
+                fire ":reload" [m | m@Message{..} <- warn ++ load, loadSeverity == Warning]
+        fire "" []
 
 
 prettyOutput :: Int -> [Load] -> [String]
