@@ -1,5 +1,6 @@
 Changelog for GHCiD
 
+    Add a very simple test suite
     Default to cabal repl if there is no .ghci file
     #1, if there is an IOError just :reload
     Say why you are reloading
